[MAIN] add transition when changing page. Need to fix problem with ::after which visible upon the content because of custom scrollbar

--- a/ExpressApp1/public/stylesheets/css/main.css
+++ b/ExpressApp1/public/stylesheets/css/main.css
@@ -241,3 +241,261 @@ body #mainSection
 .page.shown {
 	display: block;
 }
+
+#mainPageBlock::after, #mainPageBlock::before
+{
+	/* these are the 2 half blocks which cover the content once the animation is triggered */
+	content: '';
+	height: 50vh;
+	width: 100%;
+	position: fixed;
+	left: 0;
+	background-color: white;
+	z-index: 1000;
+	/* Force Hardware Acceleration */
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-transition: -webkit-transform 0.4s 0.4s;
+	-moz-transition: -moz-transform 0.4s 0.4s;
+	transition: transform 0.4s 0.4s;
+}
+
+#mainPageBlock::before
+{
+	top: 0;
+	-webkit-transform: translateY(-100%);
+	-moz-transform: translateY(-100%);
+	-ms-transform: translateY(-100%);
+	-o-transform: translateY(-100%);
+	transform: translateY(-100%);
+}
+
+#mainPageBlock::after
+{
+	bottom: 0;
+	-webkit-transform: translateY(100%);
+	-moz-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	-o-transform: translateY(100%);
+	transform: translateY(100%);
+}
+
+#mainPageBlock.page-is-changing::after, #mainPageBlock.page-is-changing::before
+{
+	-webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0);
+	transform: translateY(0);
+	-webkit-transition: -webkit-transform 0.4s 0s;
+	-moz-transition: -moz-transform 0.4s 0s;
+	transition: transform 0.4s 0s;
+}
+/*
+main {
+  height: 100vh;
+  text-align: center;
+}
+main .page {
+  position: relative;
+  height: 100vh;
+}
+main .page > div {
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}*/
+
+.page::after, .page::before
+{
+	/* these are the 2 gradient overlay at the top and bottom of the .page - to indicate that you can scroll */
+	content: '';
+	position: absolute;
+	left: 0;
+	height: 50px;
+	width: 100%;
+}
+
+.page::before
+{
+	top: 0;
+}
+
+.page::after
+{
+	bottom: 0;
+}
+/*main .page.index {*/
+/* .page basic style - index page */
+/*background-color: white;*/
+/* vertically center its content */
+/*display: table;*/
+/*width: 100%;*/
+/*}*/
+/*main .page.index > div {*/
+/* vertically center the content inside the .index */
+/*display: table-cell;*/
+/*vertical-align: middle;*/
+/*}*/
+/*main p {
+  width: 90%;
+  max-width: 768px;
+  margin: 3em auto;
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #535966;
+  text-align: left;
+}*/
+
+/*@media only screen and (min-width: 768px) 
+{
+  main.index > div {
+    padding-top: 200px;
+  }
+  main.index > div {
+    padding-top: 50px;
+  }
+  main p {
+    font-size: 1.8rem;
+    line-height: 2;
+  }
+}*/
+
+.mainCoverLayer
+{
+	/* layer that covers the content when the animation is triggered */
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	bottom: auto;
+	right: auto;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	-o-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+	height: calc(100% - 20px);
+	width: calc(100% - 20px);
+	opacity: 0;
+	visibility: hidden;
+	background-color: #C92131; /*pastel red*/
+	-webkit-transition: opacity 0.4s 0.4s, visibility 0s 0.8s;
+	-moz-transition: opacity 0.4s 0.4s, visibility 0s 0.8s;
+	transition: opacity 0.4s 0.4s, visibility 0s 0.8s;
+}
+
+.page-is-changing .mainCoverLayer
+{
+	opacity: 1;
+	visibility: visible;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+	transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+
+@media only screen and (min-width: 768px)
+{
+	.mainCoverLayer
+	{
+		height: calc(100% - 40px);
+		width: calc(100% - 40px);
+	}
+}
+
+.loading-bar
+{
+	/* this is the loding bar - visible while switching from one page to the following one */
+	position: fixed;
+	z-index: 2000;
+	left: 50%;
+	top: 50%;
+	height: 4px;
+	width: 90%;
+	background-color: #C92131; /*pastel red*/
+	visibility: hidden;
+	-webkit-transition: visibility 0s 0.4s, -webkit-transform 0.4s 0s ease-in;
+	-moz-transition: visibility 0s 0.4s, -moz-transform 0.4s 0s ease-in;
+	transition: visibility 0s 0.4s, transform 0.4s 0s ease-in;
+	/* Force Hardware Acceleration */
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	-o-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+
+	.loading-bar::before
+	{
+		/* this is the progress bar inside the loading bar */
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 0;
+		height: 100%;
+		width: 100%;
+		background-color: #A62131; /* dark red */
+		/* Force Hardware Acceleration */
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+		-webkit-transform: translateZ(0);
+		-moz-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		-o-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-transform: scaleX(0);
+		-moz-transform: scaleX(0);
+		-ms-transform: scaleX(0);
+		-o-transform: scaleX(0);
+		transform: scaleX(0);
+		-webkit-transform-origin: left center;
+		-moz-transform-origin: left center;
+		-ms-transform-origin: left center;
+		-o-transform-origin: left center;
+		transform-origin: left center;
+	}
+
+.page-is-changing .loading-bar
+{
+	visibility: visible;
+	-webkit-transform: translateX(-50%) translateY(-50%) scaleX(0.3);
+	-moz-transform: translateX(-50%) translateY(-50%) scaleX(0.3);
+	-ms-transform: translateX(-50%) translateY(-50%) scaleX(0.3);
+	-o-transform: translateX(-50%) translateY(-50%) scaleX(0.3);
+	transform: translateX(-50%) translateY(-50%) scaleX(0.3);
+	-webkit-transition: visibility 0s 0.3s, -webkit-transform 0.4s 0.4s;
+	-moz-transition: visibility 0s 0.3s, -moz-transform 0.4s 0.4s;
+	transition: visibility 0s 0.3s, transform 0.4s 0.4s;
+}
+
+	.page-is-changing .loading-bar::before
+	{
+		-webkit-transform: scaleX(1);
+		-moz-transform: scaleX(1);
+		-ms-transform: scaleX(1);
+		-o-transform: scaleX(1);
+		transform: scaleX(1);
+		-webkit-transition: -webkit-transform 0.8s 0.8s ease-in;
+		-moz-transition: -moz-transform 0.8s 0.8s ease-in;
+		transition: transform 0.8s 0.8s ease-in;
+	}
+
+@media only screen and (min-width: 768px)
+{
+	.loading-bar
+	{
+		width: calc(100% - 40px);
+	}
+}
